<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="7"
        android:id="@+id/new_item_name"
        android:hint="@string/hint_add_item_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="5"
        android:id="@+id/new_item_quantity"
        android:hint="@string/hint_add_item_qty"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_item_price"
        android:maxLength="5"
        android:inputType="number"
        android:hint="@string/hint_add_item_price"/>
    <ImageView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        android:id="@+id/image_view"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_image_button"
        android:text="@string/button_add_image"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
